// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it goes in and out of edit mode 1`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 3;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-1 {
  width: 600px;
  border: 2px solid #a5bcd3;
  padding: 48px;
  padding-top: 0;
  background-color: #fff;
  z-index: 5;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

.emotion-3[lang='zh'],
.emotion-3[lang='zh-Hans'],
.emotion-3[lang='zh-Hant'] {
  font-size: calc(18px * 1.11);
  font-size: calc(1rem * 1.11);
}

@media (min-width: 37.5625em) {
  .emotion-3 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }

  .emotion-3[lang='zh'],
  .emotion-3[lang='zh-Hans'],
  .emotion-3[lang='zh-Hant'] {
    font-size: calc(20px * 1.11);
    font-size: calc(1.1111111111111112rem * 1.11);
  }
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-4:hover,
.emotion-4:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-4[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-4[lang='zh'],
.emotion-4[lang='zh-Hans'],
.emotion-4[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-4[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-4 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-5 {
  margin: 0;
  padding: 0;
}

.emotion-6 [data-tab-trigger] {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.emotion-6 [data-tab-list] {
  position: relative;
}

.emotion-6[data-variant='rounded'] [data-tab-trigger] {
  font-size: 12px;
  font-size: 0.6666666666666666rem;
  line-height: 2;
  padding: 0 30px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  color: #20588f;
  font-weight: 600;
  background-color: #ceddea;
  z-index: 1;
  position: relative;
}

.emotion-6[data-variant='rounded'] [data-tab-trigger][lang='zh'],
.emotion-6[data-variant='rounded'] [data-tab-trigger][lang='zh-Hans'],
.emotion-6[data-variant='rounded'] [data-tab-trigger][lang='zh-Hant'] {
  font-size: calc(12px * 1.11);
  font-size: calc(0.6666666666666666rem * 1.11);
}

.emotion-6[data-variant='rounded'] [data-tab-trigger][data-state='active'] {
  background-color: #deebf6;
  z-index: 2;
}

.emotion-6[data-variant='rounded'] [data-tab-trigger]:not(:first-child) {
  margin-left: -16px;
}

.emotion-6[data-variant='rounded'] [data-tab-trigger]:hover {
  color: #444;
}

.emotion-6[data-variant='rounded'] [data-tab-trigger][data-disabled] {
  background-color: #e8e3e3;
  color: #777777;
  cursor: not-allowed;
}

.emotion-6[data-variant='rounded'] [data-tab-panel] {
  background-color: #deebf6;
  border-radius: 0px 10px 10px 10px;
  padding: 16px;
  position: relative;
}

.emotion-6[data-variant='rounded'] [data-tab-panel]:focus-within,
.emotion-6[data-variant='rounded'] [data-tab-trigger]:focus-within {
  z-index: 3;
  box-shadow: 0 0 0 2px #20588f;
}

.emotion-6[data-variant='underlined'] [data-tab-list]:after {
  border-bottom: 1px solid #a5bcd3;
  position: absolute;
  bottom: 1.5px;
  left: 0px;
  content: '';
  width: 100%;
  z-index: -1;
}

.emotion-6[data-variant='underlined'] [data-tab-trigger] {
  font-weight: 700;
  border-bottom: 5px solid transparent;
  background-color: transparent;
  color: inherit;
  padding: 6px 16px;
}

.emotion-6[data-variant='underlined'] [data-tab-trigger]:hover {
  color: #20588f;
}

.emotion-6[data-variant='underlined'] [data-tab-trigger][data-state='active'] {
  color: #20588f;
  border-bottom-color: #20588f;
}

.emotion-6[data-variant='underlined'] [data-tab-trigger][data-disabled] {
  color: #777777;
  cursor: not-allowed;
}

.emotion-6 [data-tab-panel] {
  padding: 24px 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  gap: 12px;
}

.emotion-9 {
  margin-top: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9:first-of-type {
  margin-top: 0;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 48px;
  padding-right: 12px;
}

.emotion-11:focus-within {
  border-color: #20588f;
}

.emotion-11 input,
.emotion-11 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-11 input[lang='zh'],
.emotion-11 textarea[lang='zh'],
.emotion-11 input[lang='zh-Hans'],
.emotion-11 textarea[lang='zh-Hans'],
.emotion-11 input[lang='zh-Hant'],
.emotion-11 textarea[lang='zh-Hant'] {
  font-size: calc(18 * 1.11);
  font-size: calc(1rem * 1.11);
}

.emotion-11 input:focus,
.emotion-11 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-11 input {
  padding: 6px 12px;
}

.emotion-11 textarea {
  padding: 0 12px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-11 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 12px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.5;
  min-height: 40px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  width: auto;
}

.emotion-17:hover,
.emotion-17:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-17[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-17[lang='zh'],
.emotion-17[lang='zh-Hans'],
.emotion-17[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 6px;
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-22:hover,
.emotion-22:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-22[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-22[lang='zh'],
.emotion-22[lang='zh-Hans'],
.emotion-22[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-22:hover,
.emotion-22:active,
.emotion-22:focus-visible {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-22[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-22 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-23:hover,
.emotion-23:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-23[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-23[lang='zh'],
.emotion-23[lang='zh-Hans'],
.emotion-23[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-23:hover,
.emotion-23:active,
.emotion-23:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-23[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-23 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

<div>
  <div
    aria-multiline="true"
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    contenteditable="false"
  >
    <div
      class="emotion-0"
    />
    <div />
    <div
      data-radix-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; z-index: 5; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
    >
      <div
        class="emotion-1"
        data-align="center"
        data-side="bottom"
        data-state="open"
        data-testid="editRelated"
        id="radix-0"
        role="dialog"
        style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
        tabindex="-1"
      >
        <div
          class="emotion-2"
        >
          <h3
            class="c-related-articles__component-title emotion-3"
          >
            Relatert innhold
          </h3>
          <div
            data-tooltip="Fjern"
            data-tooltip-container="true"
          >
            <button
              aria-describedby="radix-6"
              aria-label="Fjern"
              class="emotion-4"
              data-cy="close-related-button"
              data-state="instant-open"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <p>
          Dra artikkel for å endre rekkefølge
        </p>
        <ul
          class="emotion-5"
        >
          <div
            id="DndDescribedBy-0"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-0"
            role="status"
            style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
          />
        </ul>
        <div
          class="emotion-6 emotion-7"
          data-orientation="horizontal"
          data-variant="underlined"
          dir="ltr"
        >
          <div
            aria-orientation="horizontal"
            data-orientation="horizontal"
            data-tab-list=""
            role="tablist"
            style="outline: none;"
            tabindex="0"
          >
            <button
              aria-controls="radix-5-content-internalArticle"
              aria-selected="false"
              data-orientation="horizontal"
              data-radix-collection-item=""
              data-state="inactive"
              data-tab-trigger=""
              id="radix-5-trigger-internalArticle"
              role="tab"
              tabindex="-1"
              type="button"
            >
              Legg til artikkel
            </button>
            <button
              aria-controls="radix-5-content-externalArticle"
              aria-selected="true"
              data-orientation="horizontal"
              data-radix-collection-item=""
              data-state="active"
              data-tab-trigger=""
              id="radix-5-trigger-externalArticle"
              role="tab"
              tabindex="0"
              type="button"
            >
              Legg til ekstern artikkel
            </button>
          </div>
          <div
            aria-labelledby="radix-5-trigger-internalArticle"
            data-orientation="horizontal"
            data-state="inactive"
            data-tab-panel=""
            hidden=""
            id="radix-5-content-internalArticle"
            role="tabpanel"
            style=""
            tabindex="0"
          />
          <div
            aria-labelledby="radix-5-trigger-externalArticle"
            data-orientation="horizontal"
            data-state="active"
            data-tab-panel=""
            id="radix-5-content-externalArticle"
            role="tabpanel"
            tabindex="0"
          >
            <div
              class="emotion-8"
            >
              <div>
                <div
                  class="emotion-9 emotion-10"
                >
                  <div
                    class="emotion-11 emotion-12"
                  >
                    <input
                      data-testid="addExternalTitleInput"
                      placeholder="Tittel"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="emotion-9 emotion-10"
                >
                  <div
                    class="emotion-11 emotion-12"
                  >
                    <input
                      data-testid="addExternalUrlInput"
                      placeholder="https://example.com"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <button
                class="emotion-17"
                type="button"
              >
                Lagre
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="c-related-articles"
      data-testid="relatedWrapper"
    >
      <div
        class="emotion-18 emotion-19"
      >
        <h3
          class="c-related-articles__component-title emotion-3"
        >
          Relatert innhold
        </h3>
        <div
          class="emotion-21"
        >
          <div
            data-tooltip="Rediger"
            data-tooltip-container="true"
          >
            <button
              aria-label="Rediger"
              class="emotion-22"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
          <div
            data-tooltip="Slett"
            data-tooltip-container="true"
          >
            <button
              aria-label="Slett"
              class="emotion-23"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;

exports[`it goes in and out of edit mode 2`] = `
.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 3;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-1 {
  width: 600px;
  border: 2px solid #a5bcd3;
  padding: 48px;
  padding-top: 0;
  background-color: #fff;
  z-index: 5;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

.emotion-3[lang='zh'],
.emotion-3[lang='zh-Hans'],
.emotion-3[lang='zh-Hant'] {
  font-size: calc(18px * 1.11);
  font-size: calc(1rem * 1.11);
}

@media (min-width: 37.5625em) {
  .emotion-3 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }

  .emotion-3[lang='zh'],
  .emotion-3[lang='zh-Hans'],
  .emotion-3[lang='zh-Hant'] {
    font-size: calc(20px * 1.11);
    font-size: calc(1.1111111111111112rem * 1.11);
  }
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-4:hover,
.emotion-4:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-4[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-4[lang='zh'],
.emotion-4[lang='zh-Hans'],
.emotion-4[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-4:hover,
.emotion-4:active,
.emotion-4:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-4[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-4 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-5 {
  margin: 0;
  padding: 0;
}

.emotion-6 {
  list-style: none;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6[data-has-handle='false'] {
  cursor: -webkit-grab;
  cursor: grab;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  width: 100%;
}

.emotion-7>article {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #20588f;
  background: #ceddea;
  border: 2px solid #ceddea;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-9:hover,
.emotion-9:focus-visible {
  color: #fff;
  background-color: #184673;
  border-color: #184673;
}

.emotion-9[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-9[lang='zh'],
.emotion-9[lang='zh-Hans'],
.emotion-9[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-9:hover,
.emotion-9:active,
.emotion-9:focus-visible {
  color: #20588f;
  background: #ceddea;
  border-color: #ceddea;
}

.emotion-9[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-9 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-11 [data-tab-trigger] {
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.emotion-11 [data-tab-list] {
  position: relative;
}

.emotion-11[data-variant='rounded'] [data-tab-trigger] {
  font-size: 12px;
  font-size: 0.6666666666666666rem;
  line-height: 2;
  padding: 0 30px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  color: #20588f;
  font-weight: 600;
  background-color: #ceddea;
  z-index: 1;
  position: relative;
}

.emotion-11[data-variant='rounded'] [data-tab-trigger][lang='zh'],
.emotion-11[data-variant='rounded'] [data-tab-trigger][lang='zh-Hans'],
.emotion-11[data-variant='rounded'] [data-tab-trigger][lang='zh-Hant'] {
  font-size: calc(12px * 1.11);
  font-size: calc(0.6666666666666666rem * 1.11);
}

.emotion-11[data-variant='rounded'] [data-tab-trigger][data-state='active'] {
  background-color: #deebf6;
  z-index: 2;
}

.emotion-11[data-variant='rounded'] [data-tab-trigger]:not(:first-child) {
  margin-left: -16px;
}

.emotion-11[data-variant='rounded'] [data-tab-trigger]:hover {
  color: #444;
}

.emotion-11[data-variant='rounded'] [data-tab-trigger][data-disabled] {
  background-color: #e8e3e3;
  color: #777777;
  cursor: not-allowed;
}

.emotion-11[data-variant='rounded'] [data-tab-panel] {
  background-color: #deebf6;
  border-radius: 0px 10px 10px 10px;
  padding: 16px;
  position: relative;
}

.emotion-11[data-variant='rounded'] [data-tab-panel]:focus-within,
.emotion-11[data-variant='rounded'] [data-tab-trigger]:focus-within {
  z-index: 3;
  box-shadow: 0 0 0 2px #20588f;
}

.emotion-11[data-variant='underlined'] [data-tab-list]:after {
  border-bottom: 1px solid #a5bcd3;
  position: absolute;
  bottom: 1.5px;
  left: 0px;
  content: '';
  width: 100%;
  z-index: -1;
}

.emotion-11[data-variant='underlined'] [data-tab-trigger] {
  font-weight: 700;
  border-bottom: 5px solid transparent;
  background-color: transparent;
  color: inherit;
  padding: 6px 16px;
}

.emotion-11[data-variant='underlined'] [data-tab-trigger]:hover {
  color: #20588f;
}

.emotion-11[data-variant='underlined'] [data-tab-trigger][data-state='active'] {
  color: #20588f;
  border-bottom-color: #20588f;
}

.emotion-11[data-variant='underlined'] [data-tab-trigger][data-disabled] {
  color: #777777;
  cursor: not-allowed;
}

.emotion-11 [data-tab-panel] {
  padding: 24px 0;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  gap: 12px;
}

.emotion-14 {
  margin-top: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14:first-of-type {
  margin-top: 0;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 48px;
  padding-right: 12px;
}

.emotion-16:focus-within {
  border-color: #20588f;
}

.emotion-16 input,
.emotion-16 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-16 input[lang='zh'],
.emotion-16 textarea[lang='zh'],
.emotion-16 input[lang='zh-Hans'],
.emotion-16 textarea[lang='zh-Hans'],
.emotion-16 input[lang='zh-Hant'],
.emotion-16 textarea[lang='zh-Hant'] {
  font-size: calc(18 * 1.11);
  font-size: calc(1rem * 1.11);
}

.emotion-16 input:focus,
.emotion-16 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-16 input {
  padding: 6px 12px;
}

.emotion-16 textarea {
  padding: 0 12px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-16 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 12px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.5;
  min-height: 40px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  width: auto;
}

.emotion-22:hover,
.emotion-22:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-22[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-22[lang='zh'],
.emotion-22[lang='zh-Hans'],
.emotion-22[lang='zh-Hant'] {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 6px;
}

.emotion-27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-27:hover,
.emotion-27:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-27[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-27[lang='zh'],
.emotion-27[lang='zh-Hans'],
.emotion-27[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-27:hover,
.emotion-27:active,
.emotion-27:focus-visible {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-27[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-27 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #d1372e;
  border: 2px solid #d1372e;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #d1372e;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
  width: 40px;
  height: 40px;
}

.emotion-28:hover,
.emotion-28:focus-visible {
  color: #fff;
  background-color: #d1372e;
  border-color: #d1372e;
}

.emotion-28[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-28[lang='zh'],
.emotion-28[lang='zh-Hans'],
.emotion-28[lang='zh-Hant'] {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-28:hover,
.emotion-28:active,
.emotion-28:focus-visible {
  color: #fff;
  background: #d1372e;
  border-color: #d1372e;
}

.emotion-28[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-28 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

<div>
  <div
    aria-multiline="true"
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    contenteditable="false"
  >
    <div
      class="emotion-0"
    />
    <div />
    <div
      data-radix-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 0px); min-width: max-content; z-index: 5; --radix-popper-available-width: 0px; --radix-popper-available-height: 0px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 50% 0px;"
    >
      <div
        class="emotion-1"
        data-align="center"
        data-side="bottom"
        data-state="open"
        data-testid="editRelated"
        id="radix-0"
        role="dialog"
        style="--radix-popover-content-transform-origin: var(--radix-popper-transform-origin); --radix-popover-content-available-width: var(--radix-popper-available-width); --radix-popover-content-available-height: var(--radix-popper-available-height); --radix-popover-trigger-width: var(--radix-popper-anchor-width); --radix-popover-trigger-height: var(--radix-popper-anchor-height);"
        tabindex="-1"
      >
        <div
          class="emotion-2"
        >
          <h3
            class="c-related-articles__component-title emotion-3"
          >
            Relatert innhold
          </h3>
          <div
            data-tooltip="Fjern"
            data-tooltip-container="true"
          >
            <button
              aria-describedby="radix-6"
              aria-label="Fjern"
              class="emotion-4"
              data-cy="close-related-button"
              data-state="instant-open"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
        <p>
          Dra artikkel for å endre rekkefølge
        </p>
        <ul
          class="emotion-5"
        >
          <li
            aria-describedby="DndDescribedBy-0"
            aria-disabled="false"
            aria-roledescription="sortable"
            class="emotion-6"
            data-has-handle="false"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-7"
            >
              <article
                class="c-related-articles__item c-related-articles__item--external-learning-resources"
              >
                <h3
                  class="c-related-articles__title"
                >
                  <div
                    class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g>
                            <g>
                              <polygon
                                points="0 0 24 0 24 24 0 24"
                              />
                              <path
                                d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                  </div>
                  <span
                    class="c-related-articles__link-wrapper"
                  >
                    <a
                      class="c-related-articles__link"
                      href="https://www.vg.no"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Verdens gang
                    </a>
                  </span>
                </h3>
                <p
                  class="c-related-articles__description"
                />
                <p
                  class="c-related-articles__link-info"
                >
                  Nettside hos vg.no
                </p>
              </article>
              <div
                class="emotion-8"
              >
                <div
                  data-tooltip="Endre ekstern artikkel"
                  data-tooltip-container="true"
                >
                  <button
                    aria-label="Endre ekstern artikkel"
                    class="emotion-9"
                    data-state="closed"
                    data-trigger="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <path
                          d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </g>
                    </svg>
                  </button>
                </div>
                <div
                  data-tooltip="Slett ekstern artikkel"
                  data-tooltip-container="true"
                >
                  <button
                    aria-label="Slett ekstern artikkel"
                    class="emotion-4"
                    data-state="closed"
                    data-trigger="true"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </g>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </li>
          <div
            id="DndDescribedBy-0"
            style="display: none;"
          >
            
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
          </div>
          <div
            aria-atomic="true"
            aria-live="assertive"
            id="DndLiveRegion-0"
            role="status"
            style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
          />
        </ul>
        <div
          class="emotion-11 emotion-12"
          data-orientation="horizontal"
          data-variant="underlined"
          dir="ltr"
        >
          <div
            aria-orientation="horizontal"
            data-orientation="horizontal"
            data-tab-list=""
            role="tablist"
            style="outline: none;"
            tabindex="0"
          >
            <button
              aria-controls="radix-5-content-internalArticle"
              aria-selected="false"
              data-orientation="horizontal"
              data-radix-collection-item=""
              data-state="inactive"
              data-tab-trigger=""
              id="radix-5-trigger-internalArticle"
              role="tab"
              tabindex="-1"
              type="button"
            >
              Legg til artikkel
            </button>
            <button
              aria-controls="radix-5-content-externalArticle"
              aria-selected="true"
              data-orientation="horizontal"
              data-radix-collection-item=""
              data-state="active"
              data-tab-trigger=""
              id="radix-5-trigger-externalArticle"
              role="tab"
              tabindex="0"
              type="button"
            >
              Legg til ekstern artikkel
            </button>
          </div>
          <div
            aria-labelledby="radix-5-trigger-internalArticle"
            data-orientation="horizontal"
            data-state="inactive"
            data-tab-panel=""
            hidden=""
            id="radix-5-content-internalArticle"
            role="tabpanel"
            style=""
            tabindex="0"
          />
          <div
            aria-labelledby="radix-5-trigger-externalArticle"
            data-orientation="horizontal"
            data-state="active"
            data-tab-panel=""
            id="radix-5-content-externalArticle"
            role="tabpanel"
            tabindex="0"
          >
            <div
              class="emotion-13"
            >
              <div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <div
                    class="emotion-16 emotion-17"
                  >
                    <input
                      data-testid="addExternalTitleInput"
                      placeholder="Tittel"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="emotion-14 emotion-15"
                >
                  <div
                    class="emotion-16 emotion-17"
                  >
                    <input
                      data-testid="addExternalUrlInput"
                      placeholder="https://example.com"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <button
                class="emotion-22"
                type="button"
              >
                Lagre
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="c-related-articles"
      data-testid="relatedWrapper"
    >
      <div
        class="emotion-23 emotion-24"
      >
        <h3
          class="c-related-articles__component-title emotion-3"
        >
          Relatert innhold
        </h3>
        <div
          class="emotion-26"
        >
          <div
            data-tooltip="Rediger"
            data-tooltip-container="true"
          >
            <button
              aria-label="Rediger"
              class="emotion-27"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
          <div
            data-tooltip="Slett"
            data-tooltip-container="true"
          >
            <button
              aria-label="Slett"
              class="emotion-28"
              data-state="closed"
              data-trigger="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="c-related-articles__articles"
      >
        <article
          class="c-related-articles__item c-related-articles__item--external-learning-resources"
        >
          <h3
            class="c-related-articles__title"
          >
            <div
              class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g>
                      <g>
                        <polygon
                          points="0 0 24 0 24 24 0 24"
                        />
                        <path
                          d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                          fill="currentColor"
                          fill-rule="nonzero"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
            <span
              class="c-related-articles__link-wrapper"
            >
              <a
                class="c-related-articles__link"
                href="https://www.vg.no"
                rel="noopener noreferrer"
                target="_blank"
              >
                Verdens gang
              </a>
            </span>
          </h3>
          <p
            class="c-related-articles__description"
          />
          <p
            class="c-related-articles__link-info"
          >
            Nettside hos vg.no
          </p>
        </article>
      </div>
    </section>
  </div>
</div>
`;
